fix UI & Handle float execution times

--- a/views/index.pug
+++ b/views/index.pug
@@ -41,6 +41,7 @@ html(lang="en")
       button#runBtn Run Simulation
 
     h3 Schedule Timeline:
+    #taskInfo(style="font-size:16px; margin-bottom:15px;")
     canvas#ganttCanvas(width="1200" height="300")
 
     script(src="/script.js")
