--- a/styles/index.css
+++ b/styles/index.css
@@ -17,3 +17,13 @@ body {
     margin-top: 20px;
     width: 100%;
 }
+.server-config {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.server-config input {
+    width: 120px;
+    padding: 4px;
+}
